tmp/funnel-output_path-R0swipu0.tmp/gyak09/tests/unit/pods/errors/new/controller-test.jshint.js
/home/ubuntu/workspace/csaladitodo/tmp/jshinter-output_path-kJSlffeU.tmp/unit/pods/errors/new/controller-test.jshint.js